test/npm/typescript/openfl/errors/EOFErrorTest.ts
import EOFError from "openfl/errors/EOFError";
import * as assert from "assert";


describe ("TypeScript | EOFError", function () {
	
	
	it ("test", function () {
		
		// TODO: Confirm functionality
		
		var eofError = new EOFError ();
		assert.notEqual (eofError, null);
		
	});
	
	
});